# vetkaparfum

./: .travis.yml  LICENSE  Procfile  README.md  app.db  config.py  db_create.py  db_migrate.py  db_upgrade.py  pyproject.toml  requirements.txt  run.py  test.py
vetka/: __init__.py  filters.py  forms.py  models.py  security.py  tagcloud.py  views.py  x_create_db.py
vetka/static/: robots.txt  sitemap.xml  yandex_8bca23bcea368b05.html
vetka/static/content/: site.css
vetka/templates/: 404.html  add-good.html  add-review.html  add-tag.html  category-view.html  category.html  deleted.html  good-view.html  good.html  index.html  layout.html  review-view.html  tags.html
