[tool.poetry]
name = "vetkaparfum"
version = "0.1.0"
description = ""
authors = ["kapnuu <pryanichnikov.av@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.1"
flask-sqlalchemy = "^3.1.1"
sqlalchemy-migrate = "^0.13.0"
flask-wtf = "^1.2.1"
sendgrid = "^6.11.0"
twilio = "^8.11.1"
waitress = "^2.1.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
